Added google verification to the header

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,11 @@
     />
 
     <meta name="theme-color" content="#000000" />
+    <!-- Google Verification -->
+    <meta
+      name="google-site-verification"
+      content="TjFoyAM3xuQo3v146oASdMirhDJBTXgsuuY9bJPVhvU"
+    />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
